emu_tests/src/macro_usage_0.stderr
error: expected name of helper function
 --> $DIR/macro_usage_0.rs:4:11
  |
4 | #[gpu_use(5)]
  |           ^
