emu_tests/src/macro_usage_0.rs
use em::*;

// the error here is an invalid helper function
#[gpu_use(5)]
fn main() {

}